# regulatrix

./: README.md  license.md  pyproject.toml
AI-Hack-Backend/: Dockerfile  Makefile  alembic.ini  main.py  package-lock.json  pyproject.toml
AI-Hack-Backend/app/: application.py  config.py
AI-Hack-Backend/app/core/: ceph.py  context.py  database.py  enums.py
AI-Hack-Backend/app/models/: chat.py  user.py
AI-Hack-Backend/app/models/base/: base.py  mixins.py  utils.py
AI-Hack-Backend/app/repositories/: chat_repository.py  user_repository.py
AI-Hack-Backend/app/routers/: __init__.py  chat_router.py  documentation.py  gpt_router.py  user_router.py
AI-Hack-Backend/app/schemas/: chat.py  gpt.py  user.py
AI-Hack-Backend/app/schemas/base/: base.py  gpt.py
AI-Hack-Backend/app/services/: chat_service.py  gpt_service.py  user_service.py
AI-Hack-Backend/app/tests/: conftest.py  utils.py
AI-Hack-Backend/app/tests/api/: foods.py
AI-Hack-Backend/app/utils/: session.py
AI-Hack-Backend/app/validation/: chat_validation.py  user_validation.py
AI-Hack-Backend/config/: settings.local.yml  settings.yml
AI-Hack-Backend/db/alembic/: env.py
AI-Hack-Data/: Dockerfile  (+1 more)
AI-Hack-Service/: Dockerfile  main.py  pyproject.toml
AI-Hack-Service/app/: application.py
AI-Hack-Service/app/core/: artificial_intelligence.py  context.py  enums.py
AI-Hack-Service/app/routers/: message_router.py
AI-Hack-Service/app/schemas/: message.py
AI-Hack-Service/app/services/: message_service.py
AI-Hack-Service/config/: settings.yml
AI-Hack-Service/tests/: test_message_service.py
(+100 files in other folders)
