[tool.poetry]
name = "AI Hack"
version = "0.1.0"
description = ""
authors = ["Mikhail Tretyakov <Imtretyakov@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.1"
uvicorn = { extras = ["standart"], version = "^0.27.1" }
orjson = "^3.10.6"
dynaconf = "^3.2.6"
sqlalchemy = "^2.0.31"
asyncpg = "^0.29.0"
alembic = "^1.13.2"
greenlet = "^3.0.3"
sqlalchemy-utils = "^0.41.2"
bcrypt = "^4.2.0"
python-multipart = "^0.0.9"
aioboto3 = "^13.1.1"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
black = "^24.8.0"
pytest = "^8.3.2"
yarl = "^1.9.4"
httpx = "^0.27.0"
pytest-asyncio = "^0.23.8"
pytest-mock = "^3.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
